# LegalGraph

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run.ps1
.github/workflows/: ci.yml
data/sample_docs/: faq_юридические_вопросы.txt  комплаенс_политика.txt  типовой_договор_юридических_услуг.txt
infra/grafana/dashboards/: pipeline-overview.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/grafana/provisioning/datasources/: datasources.yml
infra/loki/: loki.yml
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
infra/tempo/: tempo.yml
scripts/: demo_pipeline.py  pull_ollama_models.py  seed_demo_users.py  seed_knowledge_base.py
src/: __init__.py  main.py
src/application/dto/: __init__.py
src/application/use_cases/: __init__.py
src/core/: config.py  container.py  logging.py  security.py  telemetry.py
src/domain/entities/: __init__.py
src/domain/exceptions/: __init__.py
src/domain/repositories/: __init__.py
src/domain/services/: __init__.py
src/domain/value_objects/: __init__.py
src/infrastructure/agents/: __init__.py
src/infrastructure/agents/graph/: __init__.py
src/infrastructure/agents/nodes/: __init__.py
src/infrastructure/agents/policies/: __init__.py
src/infrastructure/agents/prompts/: __init__.py  classifier_prompt.md  escalation_summary_prompt.md  generator_compliance_prompt.md  generator_contract_review_prompt.md  generator_corporate_prompt.md  generator_faq_prompt.md  generator_litigation_prompt.md  retriever_rewrite_prompt.md  verifier_accuracy_prompt.md  verifier_hallucination_prompt.md
src/infrastructure/agents/state/: __init__.py
src/infrastructure/database/: __init__.py
src/infrastructure/database/migrations/: env.py
src/infrastructure/database/migrations/versions/: 0001_initial.py
src/infrastructure/database/models/: __init__.py
src/infrastructure/database/repositories/: __init__.py
src/infrastructure/llm/: __init__.py
src/infrastructure/observability/: __init__.py
src/infrastructure/queue/: celery_app.py  tasks.py
src/infrastructure/rag/: __init__.py
src/presentation/: deps.py  exception_handlers.py
src/presentation/api/v1/: __init__.py  auth.py  escalations.py  health.py  human_review.py  knowledge.py  pipelines.py  requests.py
src/presentation/middleware/: __init__.py
src/presentation/sse/: __init__.py
tests/: conftest.py
tests/integration/: test_api.py  test_graph.py
tests/unit/: test_agent_nodes.py  test_domain_services.py  test_dto.py  test_entities.py  test_security.py  test_value_objects.py
