[project]
name = "legalops-ai-pipeline"
version = "1.0.0"
description = "Enterprise LegalOps multi-agent AI pipeline for Russian legal entities"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "LegalOpsAI Team" }]

dependencies = [
    "fastapi[standard]>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "dependency-injector>=4.43,<5",
    "structlog>=24.4,<26",
    "redis>=5.2,<6",
    "celery[redis]>=5.4,<6",
    "flower>=2.0,<3",
    "pgvector>=0.3,<1",
    "langgraph>=0.2,<1",
    "langgraph-checkpoint-postgres>=2.0,<3",
    "langchain>=0.3,<1",
    "langchain-core>=0.3,<1",
    "langchain-community>=0.3,<1",
    "langchain-ollama>=0.2,<1",
    "langfuse>=2.50,<3",
    "httpx>=0.28,<1",
    "prometheus-client>=0.21,<1",
    "prometheus-fastapi-instrumentator>=7.0,<8",
    "opentelemetry-sdk>=1.28,<2",
    "opentelemetry-api>=1.28,<2",
    "opentelemetry-exporter-otlp>=1.28,<2",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
    "opentelemetry-instrumentation-redis>=0.49b0",
    "opentelemetry-instrumentation-celery>=0.49b0",
    "pypdf>=5.1,<6",
    "python-docx>=1.1,<2",
    "unstructured>=0.16,<1",
    "tiktoken>=0.8,<1",
    "pyseto>=1.8,<2",
    "passlib[bcrypt]>=1.7,<2",
    "sse-starlette>=2.1,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6.0,<7",
    "testcontainers[postgres,redis]>=4.8,<5",
    "respx>=0.22,<1",
    "faker>=33,<40",
    "hypothesis>=6.115,<7",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "bandit>=1.8,<2",
    "safety>=3.2,<4",
    "pre-commit>=4.0,<5",
    "types-passlib>=1.7",
    "types-redis>=4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ── ruff ──────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "A", "C4",
    "SIM", "TCH", "RUF", "S", "DTZ", "PT", "ERA",
]
ignore = ["S101", "S603", "S607", "ERA001"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ── mypy ──────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "celery.*", "flower.*", "langchain.*", "langgraph.*",
    "langfuse.*", "pgvector.*", "unstructured.*", "pyseto.*",
    "dependency_injector.*", "prometheus_client.*",
    "prometheus_fastapi_instrumentator.*",
    "opentelemetry.*",
]
ignore_missing_imports = true

# ── pytest ────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=src --cov-report=term-missing --cov-fail-under=85"
markers = [
    "unit: unit tests",
    "integration: integration tests requiring containers",
    "e2e: end-to-end pipeline tests",
]

# ── bandit ────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
